# arbrs

./: Cargo.toml  README.md  arb.txt  arbrs.db-shm  arbrs.db-wal  track.txt
migrations/: 20251002055022_create_pool_schema.sql  20251003111000_add_attributes_json_to_pools.sql
src/: db.rs  dex.rs  errors.rs  lib.rs  main.rs
src/arbitrage/: cache.rs  cycle.rs  engine.rs  finder.rs  mod.rs  optimizer.rs  types.rs
src/balancer/: mod.rs  pool.rs  scaling_helper.rs  weighted_math.rs
src/core/: messaging.rs  mod.rs  token.rs  token_fetcher.rs
src/curve/: attributes_builder.rs  constants.rs  math.rs  mod.rs  pool.rs  pool_attributes.rs  pool_overrides.rs  registry.rs  strategies.rs  tricrypto_math.rs  types.rs
src/manager/: balancer_pool_manager.rs  curve_pool_manager.rs  mod.rs  pool_discovery.rs  pool_manager.rs  token_manager.rs  uniswap_v2_pool_manager.rs  uniswap_v3_pool_manager.rs
src/math/: mod.rs  utils.rs
src/math/balancer/: constants.rs  fixed_point.rs  log_exp_math.rs  mod.rs
src/math/v3/: bit_math.rs  constants.rs  full_math.rs  liquidity_math.rs  mod.rs  sqrt_price_math.rs  swap_math.rs  tick.rs  tick_bitmap.rs  tick_math.rs  unsafe_math.rs  utils.rs
src/pool/: mod.rs  strategy.rs  uniswap_v2.rs  uniswap_v2_simulation.rs  uniswap_v3.rs  uniswap_v3_snapshot.rs
tests/: balancer_math_tests.rs  curve_math_tests.rs  test_snapshot.json  token_tests.rs  uniswap_v2_test.rs  uniswap_v3_tests.rs
