[package]
name = "arbrs"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.30"
alloy-network = "1.0.30"
alloy-primitives = "1.3.1"
alloy-provider = "1.0.30"
alloy-rpc-types = "1.0.30"
alloy-rpc-types-engine = "1.0.30"
alloy-sol-types = "=1.3.1"
alloy-transport-http = "1.0.30"
async-trait = "0.1.89"
dashmap = "6.1.0"
lazy_static = "1.5.0"
lru = "0.16.0"
rand = "0.9.2"
ruint = "1.16.0"
thiserror = "2.0.16"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
