[package]
name = "arbrs"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.36"
alloy-json-rpc = "1.0.36"
alloy-network = "1.0.36"
alloy-primitives = "1.3.1"
alloy-provider = "1.0.36"
alloy-rpc-types = "1.0.36"
alloy-rpc-types-engine = "1.0.36"
alloy-sol-types = "=1.3.1"
alloy-transport-http = "1.0.36"
async-recursion = "1.1.1"
async-trait = "0.1.89"
dashmap = "6.1.0"
futures = "0.3.31"
itertools = "0.14.0"
lazy_static = "1.5.0"
lru = "0.16.1"
once_cell = "1.21.3"
rand = "0.9.2"
rug = "1.28.0"
ruint = "1.17.0"
serde = "1.0.226"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-rustls", "sqlite" ] }
thiserror = "2.0.16"
tokio = {version = "1.47.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.7"
